// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app-container should render correctly 1`] = `
<nav
  className="main-nav "
>
  <h1
    className="main-nav__title"
  >
    <a
      href="/"
    >
      translated general.name
      <span
        className="separator"
      >
         :: 
      </span>
      <span>
        translated general.role
      </span>
    </a>
    <div
      className="main-nav__edge"
    />
  </h1>
  <div
    className="main-nav__slant"
  />
  <div
    className="main-nav__links--desktop"
  >
    <ul
      className="main-nav__links"
    >
      <Link
        key="0"
        replace={false}
        to="/"
      >
        <li>
          <span
            className="index"
          >
            01
          </span>
          translated app.nav.links.home
        </li>
      </Link>
    </ul>
  </div>
  <div
    className="main-nav__links--mobile"
  >
    <div
      className="main-nav__links--menu"
      onClick={[MockFunction]}
    >
      <img
        alt=""
        src="/img/menu.png"
      />
    </div>
    <ul
      className="main-nav__links "
    >
      <Link
        key="0"
        replace={false}
        to="/"
      >
        <li>
          <span
            className="index"
          >
            01
          </span>
          translated app.nav.links.home
        </li>
      </Link>
    </ul>
  </div>
</nav>
`;

exports[`app-container should render correctly when expanded 1`] = `
<nav
  className="main-nav "
>
  <h1
    className="main-nav__title"
  >
    <a
      href="/"
    >
      translated general.name
      <span
        className="separator"
      >
         :: 
      </span>
      <span>
        translated general.role
      </span>
    </a>
    <div
      className="main-nav__edge"
    />
  </h1>
  <div
    className="main-nav__slant"
  />
  <div
    className="main-nav__links--desktop"
  >
    <ul
      className="main-nav__links"
    >
      <Link
        key="0"
        replace={false}
        to="/"
      >
        <li>
          <span
            className="index"
          >
            01
          </span>
          translated app.nav.links.home
        </li>
      </Link>
    </ul>
  </div>
  <div
    className="main-nav__links--mobile"
  >
    <div
      className="main-nav__links--menu"
      onClick={[MockFunction]}
    >
      <img
        alt=""
        src="/img/menu.png"
      />
    </div>
    <div
      className="main-nav__links--overlay"
      onClick={[MockFunction]}
    />
    <ul
      className="main-nav__links open"
    >
      <Link
        key="0"
        replace={false}
        to="/"
      >
        <li>
          <span
            className="index"
          >
            01
          </span>
          translated app.nav.links.home
        </li>
      </Link>
    </ul>
  </div>
</nav>
`;

exports[`app-container should render correctly with a transparent background 1`] = `
<nav
  className="main-nav main-nav--transparent"
>
  <h1
    className="main-nav__title"
  >
    <a
      href="/"
    >
      translated general.name
      <span
        className="separator"
      >
         :: 
      </span>
      <span>
        translated general.role
      </span>
    </a>
    <div
      className="main-nav__edge"
    />
  </h1>
  <div
    className="main-nav__slant"
  />
  <div
    className="main-nav__links--desktop"
  >
    <ul
      className="main-nav__links"
    >
      <Link
        key="0"
        replace={false}
        to="/"
      >
        <li>
          <span
            className="index"
          >
            01
          </span>
          translated app.nav.links.home
        </li>
      </Link>
    </ul>
  </div>
  <div
    className="main-nav__links--mobile"
  >
    <div
      className="main-nav__links--menu"
      onClick={[MockFunction]}
    >
      <img
        alt=""
        src="/img/menu.png"
      />
    </div>
    <ul
      className="main-nav__links "
    >
      <Link
        key="0"
        replace={false}
        to="/"
      >
        <li>
          <span
            className="index"
          >
            01
          </span>
          translated app.nav.links.home
        </li>
      </Link>
    </ul>
  </div>
</nav>
`;
